# lib/api-spec/openapi.yaml
@@ -249,6 +249,8 @@ components:
           type: ["string", "null"]
         locationDescription:
           type: ["string", "null"]
+        dateOfLoss:
+          type: ["string", "null"]
         status:
           type: string
           enum: [open, resolved]
@@ -256,6 +258,10 @@ components:
           type: string
         reporterContact:
           type: string
+        studentId:
+          type: ["string", "null"]
+        grade:
+          type: ["string", "null"]
         createdAt:
           type: string
           format: date-time
@@ -289,9 +295,15 @@ components:
           type: string
         locationDescription:
           type: string
+        dateOfLoss:
+          type: string
         reporterName:
           type: string
         reporterContact:
+          type: string
+        studentId:
+          type: string
+        grade:
           type: string
 
     ItemUpdate:
@@ -309,9 +321,15 @@ components:
           type: string
         locationDescription:
           type: string
+        dateOfLoss:
+          type: string
         reporterName:
           type: string
         reporterContact:
+          type: string
+        studentId:
+          type: string
+        grade:
           type: string
         status:
           type: string
